--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,45 @@
-#punchline{
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+* {
+    margin: 0;
+}
+
+#punchline {
     display: none;
+    font-size: 1.2rem;
+}
+
+#joke {
+    border: 2px solid gray;
+    border-radius: 8px;
+    padding: 8px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+#joke:hover {
+    border: 4px solid black;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.joke-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    gap: 16px;
+}
+
+textarea[type='text'] {
+    padding: 5px;
+    
 }
